Use `Stream.toList()` instead of `Collectors.toList()`
See #6084
Signed-off-by: stohirov <suxrobtoxirov001@gmail.com>
Signed-off-by: R3gardless <pidaoh@g.skku.edu>